@@ -45,3 +45,4 @@ Note that the following bug and feature requests are logged in GForge with relat
 
 *[#984] iDrop web '2.0' redesign effort
 **Added additional fields to the user profile, such as eduPerson attributes
+**Added 'starring' support to the jargon-user-tagging package, managing the starring of files and collections
